bk_ida/gccida/g0/pointer_diff
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/pointer_diff/src/c-typeck.c:3109:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v4; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/pointer_diff/src/c-typeck.c:3110:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/pointer_diff/src/c-typeck.c:3112:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *op1a; // [rsp+0h] [rbp-70h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/pointer_diff/src/c-typeck.c:3114:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *op0a; // [rsp+8h] [rbp-68h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/pointer_diff/src/c-typeck.c:3117:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *result; // [rsp+20h] [rbp-50h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/pointer_diff/src/c-typeck.c:3119:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *restype; // [rsp+38h] [rbp-38h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/pointer_diff/src/c-typeck.c:3122:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *con1; // [rsp+50h] [rbp-20h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/pointer_diff/src/c-typeck.c:3127:24: error: expected expression
restype = ( tree_node *)*( &global_trees + 30); 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/pointer_diff/src/c-typeck.c:3127:13: error: use of undeclared identifier 'tree_node'
restype = ( tree_node *)*( &global_trees + 30); 
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/pointer_diff/src/c-typeck.c:3145:21: error: expected expression
con1 = ( tree_node *)v3; 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/pointer_diff/src/c-typeck.c:3145:10: error: use of undeclared identifier 'tree_node'
con1 = ( tree_node *)v3; 
         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/pointer_diff/src/c-typeck.c:3158:23: error: expected expression
con1 = *( tree_node **)( v3 + 32); 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/pointer_diff/src/c-typeck.c:3158:11: error: use of undeclared identifier 'tree_node'
con1 = *( tree_node **)( v3 + 32); 
          ^
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/pointer_diff/src/obj/c-typeck.o] Error 1
